# 2DAXI

./: .gitignore  README.md
FVEuler/: BoundaryConditions.cpp  FileIO.cpp  (+9 more)
FVaxi/: BoundaryConditions.cpp  CMakeLists.txt  DGP1Tools.cpp  DGP1Tools.h  EulerFlux.cpp  EulerFlux.h  FileIO.cpp  FileIO.h  Indexing.h  Jacobian.cpp  MeshModule.cpp  MeshModule.h  SpatialDiscretization.cpp  SpatialDiscretization.h  StateVariables.h  Thermo.cpp  Thermo.h  main.cpp
FVaxi/Outputs/: adfasdfadsfawefwcds.lpk  conecomp.lay  conecomp.lpk  nozzleDGP1.lpk  nozzle_short.tec  nozzle_short_2.tec  nozzlesim_comp.lpk  res.tec  res_cP1.tec  res_fP1.tec  res_nozzle_fine_p1.tec  solution.tec  solution_coarseP1.tec  solution_coarseP1_adjnorm.tec  solution_coarseP1_crudelimit.tec  solution_coarseP1_fixed.tec  solution_coarse_FV.tec  solution_cone_cylinder.tec  solution_fineP1.tec  solution_n3exp.tec  solution_n4_wiggly.tec  solution_n4p1.tec  solution_noz1.tec  volstat.tec  wedge_2D.tec
FVns/: BoundaryConditions.cpp  BoundaryConditions.h  CMakeLists.txt  EulerFlux.cpp  EulerFlux.h  FileIO.cpp  FileIO.h  Indexing.h  InexactNewtonCg.cpp  InexactNewtonCg.h  Jacobian.cpp  Jacobian.h  LUtools.cpp  LUtools.h  MathTools.cpp  MathTools.h  MeshModule.cpp  MeshModule.h  NewtonLU.cpp  NewtonLU.h  SpatialDiscretization.cpp  SpatialDiscretization.h  StateVariables.h  Thermo.cpp  Thermo.h  main.cpp
FVns/Outputs/: channel_sol.tec  laminar_bl.tec  longinlet1.lpk  prep_contour.mcr  res.tec  shockstep.lpk  shockstep2.lpk  solution - Copy.tec  solution.tec  stepflat_invisc.lpk  stepflat_invisc_res.lpk  volstat.tec
(+8 files in other folders)
